--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -1,13 +1,16 @@
-
 /*
 	This is the main entry point for all styles
 	It should import all component stylesheets
 */
 
-@import "./highlight";
-@import "./search/SearchBox";
-
 $nav-height: 48px;
+
+@import "./highlight";
+@import "./nav/Nav";
+@import "./search/SearchBox";
+@import "./views/Home";
+@import "./repo/Repository";
+@import "./views/Search";
 
 * {
 	box-sizing: border-box;
@@ -42,84 +45,6 @@ $nav-height: 48px;
         }
     }
 
-    #nav {
-        position: fixed;
-        background-color: #2B3C53;
-        top: 0px;
-        width: 100%;
-        z-index: 10000000000000;
-        display: flex;
-        justify-content: center;
-
-        #navbar {
-            .spin:hover {    animation: spin 0.5s ease-in-out 1; }
-
-            @keyframes spin {
-                50% { transform: rotate(180deg) scale(1.2) }
-                100% { transform: rotate(180deg) scale(1) }
-            }
-
-            .header {
-                height: $nav-height;
-                display: flex;
-                align-items: center;
-
-                >a {
-                    outline: 0;
-                    margin: 0px 16px;
-                }
-
-                .fill {
-                    flex: 1;
-                }
-
-                .open-on-desktop {
-                    background-color: #1098AD;
-                    border-radius: 2px;
-                    display: flex;
-                    align-items: center;
-                    color: #FFFFFF;
-                    height: 32px;
-                    padding: 8px 12px;
-                    font-size: 12px;
-                    margin-right: 16px;
-                    text-decoration: none;
-
-                    .icon {
-                        margin-left: 8px;
-                    }
-                }
-
-				#search-box-container {
-					flex: 1 0 0;
-					.react-autosuggest__ {
-						&container {
-							padding: 0;
-							box-shadow: none;
-						}
-						&input {
-							margin: 0;
-						}
-						&suggestions-container {
-							position: absolute;
-							width: 100%;
-							margin-left: 0;
-							margin-right: 0;
-						}
-					}
-				}
-            }
-
-            #advanced-search {
-                display: none;
-                background-color: #2A3A51;
-                border-bottom: 3px solid #2A3A51;
-                border-radius: 2px;
-            }
-
-        }
-    }
-
     #app-container {
         margin-top: $nav-height;
         display: flex;
@@ -128,33 +53,23 @@ $nav-height: 48px;
 
 }
 
-.blob, .cloning, .fancyerror, .repo, .search, .tree {
-    $page-height: unquote("calc(100vh - #{$nav-height})");
-
-    background-color: #151D28;
-    height: $page-height;
-}
-.search {
-    background-color: #202A3B !important;
-}
-
 /* screens 0-1080px wide: 100% width */
 @media (min-width: 0px) and (max-width: 1080px) {
-    .blob, .cloning, .fancyerror, .repo, .search, .tree, .base #nav #navbar {
+    .cloning, .fancyerror, .repo, .search, .tree, .base .navbar .contents {
         width: 100%;
     }
 }
 
 /* screens 1080-1920px wide: 1080px wide */
 @media (min-width: 1080px) and (max-width: 1920px) {
-    .blob, .cloning, .fancyerror, .repo, .search, .tree, .base #nav #navbar {
+    .cloning, .fancyerror, .repo, .search, .tree, .base .navbar .contents {
         width: 1080px;
     }
 }
 
 /* screens >1920px: 1180px wide */
 @media (min-width: 1920px) {
-    .blob, .cloning, .fancyerror, .repo, .search, .tree, .base #nav #navbar {
+    .cloning, .fancyerror, .repo, .search, .tree, .base .navbar .contents {
         width: 1180px;
     }
 }
@@ -196,239 +111,6 @@ $nav-height: 48px;
 .font-heavy-white {
     @extend .font-white;
     font-weight: 600;
-}
-
-.blob, .repo, .tree {
-    $page-height: unquote("calc(100vh - #{$nav-height} - #{$nav-height} - 1px)");
-    height: $page-height;
-    border-bottom: 1px solid #233043;
-    background-color: #202A3B;
-
-    #tree-viewer {
-        display: none;
-        flex-direction: column;
-        flex: 1;
-        overflow-x: auto;
-    }
-
-    #tree-view-container {
-        $tvc-height: unquote("calc(100vh - #{$nav-height} - #{$nav-height} - 1px)");
-        display: flex;
-        flex-direction: row;
-        height: $tvc-height;
-
-        .right {
-            height: $tvc-height;
-            background-color: #151D28;
-            flex: 4;
-        }
-    }
-
-    .repotree>.right, .blobview-binary.right {
-        /* Affects repo.html and tree.html #tree-view-container */
-        /* Also affects blob.html when rendering binary file (just an icon saying binary files not supported) */
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        .top, .bottom {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        .top {
-            flex: 2;
-            >h1 {
-                margin-top: 1em;
-            }
-        }
-        .bottom {
-            flex: 1;
-        }
-    }
-}
-
-.blobview {
-    font-family: 'Menlo';
-    overflow: auto;
-    display: flex;
-    flex-direction: column;
-
-    td.line {
-        &::before {
-            // draw line number with css so it cannot be copied to clipboard
-            content: attr(data-line);
-            color: #31445E;
-        }
-    }
-
-    .blobview-highlighting-aborted {
-        background-color: #233043;
-        padding: 1em;
-        @extend .font-normal-grey;
-        font-size: .75em;
-    }
-
-    #blob-table {
-        position: relative;
-        padding-top: 10px;
-        flex: 4;
-        overflow: auto;
-
-        table {
-            padding-left: 1em;
-            padding-right: 1em;
-            padding-top: 2em;
-            width: 100%;
-            td.code {
-                width: 100%;
-            }
-        }
-    }
-
-    #blob {
-        white-space: pre;
-        display: none;
-    }
-
-    #blob-table>table {
-        margin-bottom: 26px;
-        border-collapse: collapse;
-        td.line, td.code {
-            padding: 0;
-            padding-top: 0.15em;
-            padding-bottom: 0.15em;
-
-            pre {
-                margin: 2px;
-            }
-        }
-        td.line {
-            color: #31445E;
-            text-align: right;
-            font-size: .75em;
-            padding-left: .25em;
-            padding-right: .75em;
-            min-width: 3em;
-        }
-        td.code {
-            padding-left: .5em;
-            white-space: pre;
-            font-size: .75em;
-            >.blame {
-                &::before {
-                    content: attr(data-blame);
-                }
-                color: #464d57;
-                padding-left: 4em;
-                display: inline-block;
-                width: 0;
-            }
-        }
-    }
-
-    #ref-widget {
-        flex: 3;
-    }
-
-}
-
-.treeview {
-    >a {
-        display: block;
-        padding: 1em;
-        text-decoration: none;
-    }
-    >a:hover {
-        background-color: #1862ab;
-    }
-}
-
-.navbar {
-    @extend .font-white;
-    font-size: .75em;
-    height: 48px;
-    border-bottom: 1px solid #233043;
-    display: flex;
-    align-items: center;
-
-    a, .path a {
-        text-decoration: none;
-        @extend .font-white;
-    }
-
-    #file-explorer {
-        display: flex;
-        cursor: pointer;
-        align-items: center;
-        margin-right: 1.5em;
-        margin-left: .75em;
-
-        .group-icon {
-            margin: 0px 10px;
-            width: 9px;
-            height: 9px;
-        }
-    }
-
-    .path {
-        flex: 1;
-        display: flex;
-        align-items: center;
-
-        .book-icon {
-            width: 10px;
-            height: 12px;
-            margin-right: 10px;
-        }
-
-        .book-link {
-            /* TODO(john): use uniform SVG asset box-sizing */
-            display: flex;
-            align-items: center;
-        }
-
-        >span {
-            >a:last-child {
-                @extend .font-heavy-white;
-            }
-        }
-    }
-
-    .right-pane {
-        display: inline-block;
-        .share {
-            .share-icon {
-                width: 9px;
-                height: 13px;
-                margin-left: 8px;
-                position: relative;
-                top: 2px;
-            }
-        }
-        .authorship {
-            .authorship-icon {
-                width: 14px;
-                height: 9px;
-                margin-left: 6px;
-            }
-            margin-left: 18px;
-        }
-        .github {
-            .github-icon {
-                width: 13px;
-                height: 14px;
-                margin-left: 6px;
-                position: relative;
-                top: 4px;
-            }
-
-            margin-right: 18px;
-            margin-left: 14px;
-        }
-    }
 }
 
 .cloning {
@@ -502,56 +184,5 @@ $nav-height: 48px;
 
     >img {
         display: block;
-    }
-}
-
-.error {
-
-}
-
-.home {
-    $home-height: unquote("calc(100vh - #{$nav-height})");
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: $home-height;
-    width: 100%;
-
-    .header {
-        flex: 2;
-        display: flex;
-        align-items: center;
-        background-color: initial;
-    }
-
-    #search-widget {
-		flex: 10;
-		width: 600px;
-		max-width: 100vw;
-        font-size: 14px;
-		color: #93A9C8;
-		width: 600px;
-		max-width: 100vw;
-		margin: 20px;
-    }
-
-    .footer {
-        flex: 1;
-    }
-}
-
-.repo {
-    >h3 {
-        @extend .font-normal-grey;
-        padding: 1em;
-        border-bottom: 1px solid #233043;
-        font-weight: bold;
-
-        >em {
-            font-weight: normal;
-            font-size: .8em;
-        }
     }
 }
