--- a/cmd/frontend/internal/app/templates/ui2/home.html
+++ b/cmd/frontend/internal/app/templates/ui2/home.html
@@ -2,9 +2,7 @@
 
 {{define "Body"}}
 <div class="home">
-	<div class="header">
-		<img src="{{.AssetURL}}/img/ui2/sourcegraph-head-logo.svg" />
-	</div>
+	<img class="header" src="{{.AssetURL}}/img/ui2/sourcegraph-head-logo.svg" />
 	<div id="search-widget">
 	</div>
 	<div class="footer">
