--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -534,21 +534,21 @@ kbd {
     width: 100%;
 
     .header {
-        flex: 2;
+        flex: 0 0 auto;
         display: flex;
-        align-items: center;
-        background-color: initial;
+		align-items: center;
+		width: 20rem;
+		margin-top: 8rem;
     }
 
     #search-widget {
 		flex: 10;
-		width: 600px;
+		width: 624px;
 		max-width: 100vw;
         font-size: 14px;
 		color: #93A9C8;
-		width: 600px;
-		max-width: 100vw;
-		margin: 20px;
+		margin: 0 20px;
+		margin-top: 4rem;
     }
 
     .footer {
