--- a/web/src/search/_SearchBox.scss
+++ b/web/src/search/_SearchBox.scss
@@ -4,7 +4,7 @@
 	color: #93A9C8;
 	padding: 0;
 	border-radius: 0.25rem;
-	box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.32);
+	// box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.32);
 	background-color: #1C2736;
 	padding-top: 0.5rem;
 
