--- a/web/src/search/_SearchBox.scss
+++ b/web/src/search/_SearchBox.scss
@@ -138,6 +138,7 @@
 		&-item {
 			display: flex;
 			border-top: 1px solid #2A3A51;
+			background-color: #1C2736;
 			cursor: pointer;
 			padding: 0 1rem;
 			height: 2rem;
