web: finish integrating search into pure react SPA

--- a/cmd/frontend/internal/app/templates/ui2/home.html
+++ b/cmd/frontend/internal/app/templates/ui2/home.html
@@ -1,13 +1,3 @@
 {{define "Title"}}Sourcegraph{{end}}
 
-{{define "Body"}}
-<div class="home">
-	<img class="header" src="{{.AssetURL}}/img/ui2/sourcegraph-head-logo.svg" />
-	<div id="search-widget">
-	</div>
-	<div class="footer">
-	</div>
-</div>
-{{end}}
-
-{{template "basenonav.html" .}}
+{{template "base.html" .}}
