--- a/web/src/views/_Home.scss
+++ b/web/src/views/_Home.scss
@@ -1,29 +1,28 @@
 .home {
-    $home-height: unquote("calc(100vh - #{$nav-height})");
-
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: $home-height;
+    height: 100vh;
     width: 100%;
 
     .header {
-        flex: 2;
+        flex: 0 0 auto;
         display: flex;
-        align-items: center;
-        background-color: initial;
+		align-items: center;
+		width: 20rem;
+		// margin-top: 8rem;
+		margin-top: 5rem;
     }
 
     #search-widget {
 		flex: 10;
-		width: 600px;
+		width: 712px;
 		max-width: 100vw;
         font-size: 14px;
 		color: #93A9C8;
-		width: 600px;
-		max-width: 100vw;
-		margin: 20px;
+		margin: 0 20px;
+		margin-top: 4rem;
     }
 
     .footer {
