web: clean up for pure react
- reorganize code
- remove dead code (not used in pure react)
- delete unnecessary comments

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -6,9 +6,9 @@
 $nav-height: 48px;
 
 @import "./highlight";
+@import "./home/Home";
 @import "./nav/Nav";
 @import "./search/SearchBox";
-@import "./views/Home";
 @import "./repo/Repository";
 
 * {
