--- a/web/src/home/_Home.scss
+++ b/web/src/home/_Home.scss
@@ -2,30 +2,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+	justify-content: flex-start;
     height: 100vh;
-    width: 100%;
+	width: 100%;
 
-    .header {
+    &__logo {
         flex: 0 0 auto;
         display: flex;
 		align-items: center;
 		width: 20rem;
-		// margin-top: 8rem;
-		margin-top: 5rem;
-    }
+		margin-top: 8rem;
+		max-width: 90%;
+	}
 
-    #search-widget {
-		flex: 10;
-		width: 712px;
-		max-width: 100vw;
-        font-size: 14px;
-		color: #93A9C8;
-		margin: 0 20px;
+	&__search-box-container {
+		flex: 0 0 auto;
 		margin-top: 4rem;
-    }
-
-    .footer {
-        flex: 1;
-    }
+		width: 44.5rem;
+		max-width: 90%;
+	}
 }
