--- a/web/src/search/_SearchBox.scss
+++ b/web/src/search/_SearchBox.scss
@@ -7,6 +7,7 @@
 	// box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.32);
 	background-color: #1C2736;
 	padding-top: 0.5rem;
+	width: 100%;
 
 	.icon {
 		height: 100%;
