Support File globs in search (#6977)

--- a/web/src/search/_SearchBox.scss
+++ b/web/src/search/_SearchBox.scss
@@ -114,6 +114,7 @@
 					display: inline-block;
 					vertical-align: top;
 					margin-left: 0.5rem;
+					unicode-bidi: plaintext;
 					&::after {
 						content: '\200E';
 					}
