--- a/web/src/nav/_Navbar.scss
+++ b/web/src/nav/_Navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
 
     position: sticky;
-    background-color: #1C2736;
+    flex: none;
     height: 3rem;
     width: 100%;
     z-index: 9999999;
@@ -9,6 +9,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    background-color: #1C2736;
 
     &__logo-link {
         outline: 0;
