--- a/web/src/repo/_RepoNav.scss
+++ b/web/src/repo/_RepoNav.scss
@@ -1,18 +1,21 @@
 
 .repo-nav {
-    font-size: .75em;
-    height: 48px;
-    border-bottom: 1px solid #233043;
+    flex: none;
+    height: 3rem;
+
     display: flex;
     align-items: center;
+
+    border-bottom: 1px solid #233043;
+    font-size: .75em;
 
     a, .path a {
         text-decoration: none;
     }
 
     svg.icon {
-        width: 16px;
-        height: 16px;
+        width: 1rem;
+        height: 1rem;
         display: inherit;
         fill: currentColor;
         margin-right: 5px;
@@ -22,8 +25,8 @@
     svg.github-icon {
         display: inherit;
         fill: currentColor;
-        margin-right: 7px;
-        margin-left: 7px;
+        margin-right: 0.5rem;
+        margin-left: 0.5rem;
     }
 
     .explorer {
@@ -35,8 +38,8 @@
 
         .group-icon {
             margin: 0px 10px;
-            width: 9px;
-            height: 9px;
+            width: 0.5rem;
+            height: 0.5rem;
         }
     }
 
