Refactor ReferencesWidget to scss styles

--- a/web/src/repo/_Repository.scss
+++ b/web/src/repo/_Repository.scss
@@ -44,6 +44,10 @@
         min-height: 0;
         min-width: 0;
     }
+
+    &__blob-placeholder {
+        flex: 1 1 50%;
+    }
 }
 
 .ref-panel {
