Refactor CodeExcerpt to SCSS

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -12,6 +12,7 @@ $color-text: #93A9C8;
 @import './search/SearchBox';
 @import './repo/Repository';
 @import './references/ReferencesWidget';
+@import './components/CodeExcerpt';
 
 
 // Define the 'system' font family
