--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -10,6 +10,7 @@ $color-text: #93A9C8;
 @import './home/Home';
 @import './nav/Navbar';
 @import './search/SearchBox';
+@import './search/SearchResults';
 @import './repo/Repository';
 @import './references/ReferencesWidget';
 @import './components/CodeExcerpt';
