--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -32,17 +32,17 @@ $color-text: #93A9C8;
     padding: 0;
 }
 
-// Scrollbar
+// Custom scrollbar
 ::-webkit-scrollbar {
-    width: 12px;
-    height: 12px;
+    width: 0.5rem;
+    height: 0.5rem;
 }
 ::-webkit-scrollbar-corner,
 ::-webkit-scrollbar-track {
-    background-color: #233043;
+    background-color: transparent;
 }
 ::-webkit-scrollbar-thumb {
-    background-color: #43536d;
+    background-color: #2A3A51;
 }
 
 html {
