webapp syntax highlighting improvements follow-on (#7027)
* web: use simplified Repository.tsx fetchHighlightedFile error handling

* cmd/frontend/internal/graphqlbackend: HighlightedFile.isBinary -> File.binary instead

* web: npm run graphql

* cmd/frontend/internal/graphqlbackend: implement File.binary instead of HighlightedFile.isBinary

Fixes #7008 (see below) and creates #7025

![image](https://user-images.githubusercontent.com/3173176/30134299-8761afbc-930b-11e7-9cdf-68d84f8cc5f7.png)

* web: use this.props in Repository.tsx because it could have changed / be different from constructor props

* web: add comment about parentheses around link (since john and felix had same question)

* web: cleanup repo alert scss

* web: remove isBinary from highlighting graphql query

* web: do not use anonymous function for onClick handler

* web: use link for 'show anyway' instead of span for proper link coloring/underline/pointer styles

--- a/web/src/repo/_Repository.scss
+++ b/web/src/repo/_Repository.scss
@@ -12,6 +12,31 @@
 
     border-bottom: 1px solid #233043;
 
+    &__blob-alert {
+        font-family: system;
+        font-size: 12px;
+        color: #93A9C8;
+        background-color: #1c2736;
+        display: flex;
+        padding: .5em;
+        line-height: 2em;
+
+        .icon {
+            margin-right: .25em;
+            width: 1.5rem;
+            height: 2em;
+            fill: currentColor;
+            text-align: center;
+            display: inline-block;
+            > svg {
+                width: 1.5rem;
+            }
+        }
+        &--error {
+            font-weight: bold;
+        }
+    }
+
     &__content {
         flex: 1 1 auto;
         display: flex;
