--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -15,6 +15,7 @@ $color-text: #93A9C8;
 @import './repo/Tooltips';
 @import './references/ReferencesWidget';
 @import './components/CodeExcerpt';
+@import './components/HeroPage';
 
 
 // Define the 'system' font family
@@ -131,71 +132,25 @@ a {
     }
 }
 
-// TODO move out of here
-.cloning {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    .top, .bottom {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .top {
-        flex: 2;
-        >img {
-            animation:spin 2s linear infinite;
-        }
-        @keyframes spin { 100% { transform:rotate(360deg); } }
-        >h1 {
-            margin-top: 1em;
-        }
-    }
-    .bottom {
-        flex: 1;
-    }
-}
-
-.fancyerror {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    .top, .bottom {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .top {
-        flex: 2;
-        >h1 {
-            margin-top: 1em;
-        }
-        >p {
-            margin-top: .5em;
-        }
-    }
-    .bottom {
-        flex: 1;
-        .error-id {
+.app {
+    &__error {
+        &-id {
             font-family: 'Menlo';
             background-color: rgb(36, 49, 66);
             padding: .3em;
             border-radius: 2px;
         }
-        .error-text {
+
+        > hr {
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+            border-color: #93A9C8;
+        }
+
+        &-text {
             margin-top: 1em;
             background-color: #233043;
             padding: 1em;
         }
-    }
-
-    >img {
-        display: block;
     }
 }
