--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -14,6 +14,7 @@ $color-text: #93A9C8;
 @import './repo/Repository';
 @import './repo/Tooltips';
 @import './references/ReferencesWidget';
+@import './tree/Tree';
 @import './components/CodeExcerpt';
 @import './components/HeroPage';
 
