Fix inversed text

--- a/web/src/search/_SearchBox.scss
+++ b/web/src/search/_SearchBox.scss
@@ -115,6 +115,7 @@
             overflow: hidden;
             text-overflow: ellipsis;
             direction: rtl;
+            unicode-bidi: plaintext;
             display: inline-block;
             vertical-align: top;
             margin-left: 0.5rem;
