--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -87,14 +87,17 @@ body {
 kbd {
     font-family: Menlo;
     display: inline-block;
-    line-height: 1rem;
-    height: 1rem;
-    font-size: 0.5rem;
-    vertical-align: middle;
+    line-height: 1.125rem;
+    height: 1.125rem;
+    font-size: 0.8em;
     background-color: #93A9C8;
     color: #2A3A51;
-    border-radius: 1px;
     padding: 0 0.25rem;
+    margin: 0 0.125rem;
+    vertical-align: middle;
+    border-bottom-color: #5D7EAC;
+    border-radius: 3px;
+    box-shadow: inset 0 -2px 0 #5D7EAC;
 }
 
 a {
